# ShuangEngine

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: imgui.cmake
examples/: CMakeLists.txt
examples/triangle/: triangle.cc
shaders/: triangle.frag  triangle.vert  triangle.vert.spv
shuang/: Application.cc  Buffer.cc  CMakeLists.txt  Camera.cc  CommandPool.cc  DescriptorPool.cc  DescriptorSet.cc  DescriptorSetLayout.cc  Device.cc  FileSystem.cc  FreeCamera.cc  IndexBuffer.cc  Initializer.cc  InputEvent.cc  Instance.cc  OrbitCamera.cc  PhysicalDevice.cc  Pipeline.cc  RenderPass.cc  Surface.cc  Swapchain.cc  UniformBuffer.cc  Validation.cc  VertexBuffer.cc  VulkanExampleBase.cc  Window.cc
shuang/include/: Application.h  Buffer.h  Camera.h  CommandPool.h  DescriptorPool.h  DescriptorSet.h  DescriptorSetLayout.h  Device.h  FileSystem.h  FreeCamera.h  Image.h  ImageView.h  IndexBuffer.h  Initializer.h  InputEvent.h  Instance.h  Log.h  Logger.h  Macros.h  OrbitCamera.h  PhysicalDevice.h  Pipeline.h  Queue.h  RenderPass.h  RenderTarget.h  Scene.h  Surface.h  Swapchain.h  UniformBuffer.h  Validation.h  Vertex.h  VertexBuffer.h  VulkanExampleBase.h  Window.h
shuang/include/model/: Cube.h  Grid.h  Model.h  Triangle.h
shuang/model/: Cube.cc  Grid.cc  Model.cc  Plane.cc  Triangle.cc
